# movie-tv-recommender

./: .env.template  .gitattributes  .gitignore  CODE_REVIEW.md  DEPLOYMENT.md  GIT_COMMANDS.md  PRE_DEPLOYMENT_CHECKLIST.md  README.md  TESTING_GUIDE.md  app.py  data_preprocessing.ipynb  main.py  preprocessing.ipynb  pyproject.toml  requirements.txt  test_imports.py  test_tmdb_api_key.py  tv_preprocessing.ipynb
.streamlit/: config.toml
app/: main.py
app/components/: __init__.py  analytics.py
data/: .gitkeep  movies.db
data/provider_logos/: .gitkeep
scripts/: cleanup_project.py  create_sample_database.py  download_provider_logos.py  migrate_to_db.py  migrate_tv_to_db.py  scrape_movies.py  scrape_tv_shows.py
src/: __init__.py  config.py  data.py  database.py  posters.py  recommend.py
tests/: test_recommend.py
