[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-recommender"
version = "1.0.0"
description = "A content-based movie recommendation system"
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

